# curve_tools

./: .gitignore  .gitlab-ci.yml  .gitmodules  Trajectory.sln
Control/: Control.csproj  ModelBase.cs  Ports.cs  Program.cs  call_scilab.cs  synth_core.sce
Control/Properties/: AssemblyInfo.cs  Settings.Designer.cs
DotnetScilab/: DotnetScilab.csproj  Scilab.cs
Player/: Form1.Designer.cs  Form1.cs  Form1.resx  Player.csproj
Player/Properties/: AssemblyInfo.cs  Resources.Designer.cs
Trajectory_CUDA/: .cproject  .project  CMakeLists.txt  package.xml
Trajectory_CUDA/inc/: ferguson_coons_gpu.hcu  path_core.hpp
Trajectory_CUDA/src/: MPC.cu  ferguson_coons_gpu.cu  main.cpp  minimum_jerk.cu  path_core.cu  spline_gpu.cu  spline_gpu.hpp
base_control/: CMakeLists.txt  comm.h  package.xml
base_control/msg/: myTwistacc.msg
base_control/src/: comm.cpp  main.cpp
control_server/: .cproject  .project  CMakeLists.txt  package.xml  synth_core.sce
control_server/src/: control_server_node.cpp  motor_config.h  sci_bridge.c  sci_bridge.h
control_server/srv/: C1.srv  reference.srv
cuda-demo/: .cproject  .project  lmi.cu  main.cu  spline_gpu.cu  trajectory_tools.cu
modeling/: Class1.cs  CtrlSynth.cs  modeling.csproj  synth_core.sce
publish_raw_serial/: CMakeLists.txt  package.xml
publish_raw_serial/include/publish_raw_serial/: format.h
read_qei/: CMakeLists.txt  main.cpp  mainwindow.ui  package.xml
read_qei/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
visualize/: CMakeLists.txt  package.xml
